[package]
name = "imaging-lib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.1"
futures = "0.3.28"
image = "0.24.6"
itertools = "0.10.5"
kmeans_colors = "0.5.0"
libR-sys = "0.4.0"
log = "0.4.17"
palette = "0.6.1"
rayon = "1.7.0"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
simple_logger = "4.1.0" 
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] } 
tokio-stream = { version = "0.1.12", features = ["time"] }
zip = "0.6.4"

[profile.release]
lto = true

[features]
bin = []

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "img-download"
path = "src/bin/img_download.rs"
required-features = ["bin"]

[[bin]]
name = "img-features"
path = "src/bin/img_features.rs"
required-features = ["bin"]
